[project]
name = "the-tony-blair-arxiv"
version = "0.1.0"
description = "Arxiv paper search engine using OpenAI and Upstash Vector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.79.0",
    "pytest>=8.3.5",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "upstash-vector>=0.8.0",
]
